lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:5: error: not found: value y
	var Y:Point = y()
                      ^Lander:7: error: not found: value y
		y
                ^Lander:8: error: not found: value y
		if (y(Liste(i))==y(Liste(i+1))) {
                    ^